@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Document Custom Script Helper pattern
 
 0.002216  2015-06-14 09:34:57-07:00 America/Los_Angeles
  - Use Pod::Weaver::Plugin::Ditaa to render diagram
